--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
         });
     </script>
     <div class="rodapepadrao">
-         CRÉDITOS: EquipeAlura/SEED-PR. Autoras e autores de códigos, imagens, sons e demais conhecimentos utilzados e multiplicados neste projeto aberto. Sobretudo, toda gratidão por gentis críticas e generosa motivação creditadas por estimadas e valorosos estudantes.
-          <div class="copyright">© Copyright Física Renato Pereira ®ψΣ - 2023</div>
+         CRÉDITOS: EquipeAlura/SEED-PR. Autoras e autores de códigos, imagens, sons e demais conhecimentos utilzados e multiplicados neste projeto aberto. Sobretudo, agradeço críticas constritivas e apoio dados pelos meus pais que, em momentos dificeis, me ajudaram a não desistir, sendo pilares fundamentais da minha vida.
+          <div class="copyright">© Copyright Leticia Luz свет - 2023</div>
           </div>
 </body>
 
